--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -11,7 +11,7 @@
 
 /* Generators */
 .generator {
-    border: 2px solid red;
+    border: 2px solid lime;
     background-color: black;
     color: lime;
     text-align: center;
@@ -28,11 +28,12 @@
     font-size: 1.0em;
 }
 
-.generator.locked {
+.locked {
     color: red;
+    border: 2px solid red;
 }
 
-.generatorContainer {
+#generatorContainer {
     display: flex;
     width: 600px;
     flex-wrap: wrap;
@@ -79,6 +80,35 @@
 .tab {
     display: none;
     animation: fadeEffect 1s;
+}
+
+.infinityTabContainer {
+    font-size: 1em;
+    text-align: center;
+    overflow: hidden;
+}
+
+.infinityTabContainer button {
+    color: #CCC;
+    border: 2px solid #FFF;
+    font-size: 1em;
+    margin: 2px;
+    padding: 0.5em 0.5em 0.5em;
+}
+
+.infinityTabContainer button:hover {
+    border: 2px solid #0B0;
+}
+
+.infinityTabContainer button.active {
+    color: #CCC;
+    border: 2px solid #0F0;
+    font-size: 1em;
+}
+
+.infinityTab {
+    display: none;
+        animation: fadeEffect 1s;
 }
 
 /* Info */
