--- a/styles/mobilePortrait.css
+++ b/styles/mobilePortrait.css
@@ -15,7 +15,7 @@
     background-color: black;
     color: lime;
     text-align: center;
-    width: 175px;
+    width: 180px;
     padding: 10px;
     cursor: pointer;
 }
@@ -35,7 +35,7 @@
 
 #generatorContainer {
     display: flex;
-    width: 350px;
+    width: 360px;
     flex-wrap: wrap;
 }
 
@@ -108,6 +108,29 @@
 }
 
 .infinityTab {
+    display: none;
+    animation: fadeEffect 1s;
+}
+
+.shopTabContainer button {
+    color: #CCC;
+    border: 2px solid #FFF;
+    font-size: 1em;
+    margin: 2px;
+    padding: 0.5em 0.5em 0.5em;
+}
+
+.shopTabContainer button:hover {
+    border: 2px solid #0B0;
+}
+
+.shopTabContainer button.active {
+    color: #CCC;
+    border: 2px solid #0F0;
+    font-size: 0.9em;
+}
+
+.shopTab {
     display: none;
     animation: fadeEffect 1s;
 }
