--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,91 @@
 body {
-    margin: 0px;
-    padding: 1em;
-    border: 4px solid lime; 
     background-color: black;
     color: white;
-    overflow: hidden;
+    user-select: none;
 }
-
 button {
-    border: 2px solid lime;
     background-color: black;
     color: white;
-    margin: 2px;
-}
-
-#shop {
     border: 2px solid lime;
-    width: 15%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+}
+button:hover {
+    animation: highlight 1s infinite;
+}
+button:target {
+    animation: clicked .5s;
+}
+#clickButton {
+    width: 10vw;
+    height: 16.5vh;
+    cursor: pointer;
+    font-size: 2em;
+}
+#clickButton:active {
+    animation: clickFeedback 1s;
+}
+#statusBar {
+    text-align: center;
+    background-color: #1A1A1A;
+}
+.column {
+    width: 47%;
+    float: left;
+}
+#shop {
+    width: 45%;
+    float: left;
+    border: 3px double lime;
+}
+#shop button {
+    width: 30%;
 }
 #shop .scroll {
     width: 100%;
-    border: 2px solid lime;
-    align-items: center;
-    justify-content: left;
+    border: 1px solid lime;
+    animation: fadeOut;
+}
+#shop .scroll button {
+    font-size: 1.7em;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-align: center;
+    cursor: pointer;
 }
 #shop .costText {
-    text-align: right;
+    font-size: 1.5em;
+    float: right;
+    margin: 5px;
+}
+
+@keyframes highlight {
+    0% {
+        border: solid lime;
+    }
+    50% {
+        border: solid green;
+    }
+    100% {
+        border: solid lime;
+    }
+}
+@keyframes fadeOut {
+    0% {
+        opacity: 100%;
+    }
+
+    100% {
+        opacity: 0%;
+    }
+}
+@keyframes clickFeedback {
+    10% {
+        font-size: 2.2em;
+        transform: scale(1.1)
+    }
+}
+@keyframes clicked {
+    5% {
+        transform: scale(1.1);
+        background-color: #101010;
+    }
 }
